Adding Anh-Thu's research questions

--- a/HELP_Analysis.html
+++ b/HELP_Analysis.html
@@ -1527,6 +1527,14 @@ Loan Program (HELP) Statistics</h1>
 </div>
 <div id="anh-thus-part" class="section level3">
 <h3>Anh-Thu’s Part</h3>
+<ol start="3" style="list-style-type: decimal">
+<li><p>How does the distribution of taxable (HELP repayment) income of
+HELP debtors in Australian States and Territories in the 2021-22
+financial year compare to a decade ago in 2011-12?</p></li>
+<li><p>What trend can be observed of the median taxable (HELP repayment)
+income of HELP debtors in Australian States and Territories over
+time?</p></li>
+</ol>
 </div>
 <div id="chenxis-part" class="section level3">
 <h3>Chenxi’s Part</h3>
