--- a/HELP_Analysis.html
+++ b/HELP_Analysis.html
@@ -1338,6 +1338,28 @@ if (window.hljs) {
 
 
 
+<style type="text/css">
+
+div.csl-bib-body { }
+div.csl-entry {
+clear: both;
+}
+.hanging div.csl-entry {
+margin-left:2em;
+text-indent:-2em;
+}
+div.csl-left-margin {
+min-width:2em;
+float:left;
+}
+div.csl-right-inline {
+margin-left:2em;
+padding-left:1em;
+}
+div.csl-indent {
+margin-left: 2em;
+}
+</style>
 
 
 
@@ -1505,6 +1527,7 @@ border-radius: 0px;
 
 <div id="introduction" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Introduction</h1>
+<p>Testing reference <span class="citation">(Baum, 2016)</span></p>
 </div>
 <div id="analysis" class="section level1" number="2">
 <h1><span class="header-section-number">2</span> Analysis</h1>
@@ -1837,6 +1860,11 @@ Figure 2.2: Median and mean income of HELP debtors in Australia from 2009 to 202
 </div>
 <div id="references" class="section level1" number="4">
 <h1><span class="header-section-number">4</span> References</h1>
+<div id="refs" class="references csl-bib-body hanging-indent" line-spacing="2">
+<div id="ref-BaumSandy2016SLPa" class="csl-entry">
+Baum, S. (2016). Student loan programs and the realities of student debt. In <em>Student debt</em> (pp. 17–42). Palgrave Macmillan.
+</div>
+</div>
 </div>
 <div id="appendix" class="section level1" number="5">
 <h1><span class="header-section-number">5</span> Appendix</h1>
