Added introduction section and more references in bib file

--- a/HELP_Analysis.html
+++ b/HELP_Analysis.html
@@ -1527,7 +1527,8 @@ border-radius: 0px;
 
 <div id="introduction" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Introduction</h1>
-<p>Testing reference <span class="citation">(Baum, 2016)</span></p>
+<p>The Higher Education Loan Program (HELP) is provided by the Australian Government to eligible students to cover the cost of tertiary education and training. The loan is income-contingent and students are required to repay their loan(s) once their income reaches the minimum threshold through the income tax system. The income-contingency reduces the risk of borrowing for education when the future value of the education or training is not apparent, especially for students from low-income backgrounds <span class="citation">(Albrecht &amp; Ziderman, 1991)</span>.</p>
+<p>As of 2021-22, the minimum repayment threshold is $47,014. It is projected that HELP debt will total almost $200 billion in 2024–25 and almost one-third of this debt will not be collected. This raises the issue of sustainability of the program <span class="citation">(Jackson et al., 2016)</span>. For debtors who do not earn the minimum threshold, the risk of loan defaults increase and the burden of repayment falls on taxpayers and more successful borrowers <span class="citation">(Baum, 2016)</span>.</p>
 </div>
 <div id="analysis" class="section level1" number="2">
 <h1><span class="header-section-number">2</span> Analysis</h1>
@@ -1861,8 +1862,14 @@ Figure 2.2: Median and mean income of HELP debtors in Australia from 2009 to 202
 <div id="references" class="section level1" number="4">
 <h1><span class="header-section-number">4</span> References</h1>
 <div id="refs" class="references csl-bib-body hanging-indent" line-spacing="2">
+<div id="ref-albrecht1991deferred" class="csl-entry">
+Albrecht, D., &amp; Ziderman, A. (1991). <em>Deferred cost recovery for higher education: Student loan programs in developing countries</em>. World Bank. <a href="https://books.google.com.au/books?id=GCWa2sbFoD0C">https://books.google.com.au/books?id=GCWa2sbFoD0C</a>
+</div>
 <div id="ref-BaumSandy2016SLPa" class="csl-entry">
 Baum, S. (2016). Student loan programs and the realities of student debt. In <em>Student debt</em> (pp. 17–42). Palgrave Macmillan.
+</div>
+<div id="ref-anao2016" class="csl-entry">
+Jackson, K., Esguerra, E., Callaway, N., Liao, J., &amp; Morris, A. (2016). <em>Administration of higher education loan program debt and repayments</em> (Technical Report, Vol. 31). Australian National Audit Office.
 </div>
 </div>
 </div>
