--- a/HELP_Analysis.html
+++ b/HELP_Analysis.html
@@ -1527,9 +1527,19 @@ border-radius: 0px;
 
 <div id="introduction" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Introduction</h1>
-<p>The Higher Education Loan Program (HELP) is provided by the Australian Government to eligible students to cover the cost of tertiary education and training. The loan is income-contingent and students are required to repay their loan(s) once their income reaches the minimum threshold through the income tax system. The income-contingency reduces the risk of borrowing for education when the future value of the education or training is not apparent, especially for students from low-income backgrounds <span class="citation">(Albrecht &amp; Ziderman, 1991)</span>.</p>
-<p>Educational attainment is associated with higher labour force participation, higher income, greater wealth, lower financial stress and healthier behaviours <span class="citation">(OECD, 2018)</span>. Despite this, many individuals have debt-averse attitudes which deter them from applying to university <span class="citation">(C. Callender; G. Mason, 2017)</span>. Fees for tertiary education have grown fast over time whereas there has been a flat growth in the wages of young adults aged 25-34 <span class="citation">(Preston, 2023)</span>. Enrolments and the number of people with outstanding HELP debts has steadily increased <span class="citation">(Universities Australia, 2022)</span>.</p>
-<p>As of 2021-22, the minimum repayment threshold is $47,014. It is projected that HELP debt will total almost $200 billion in 2024–25 and almost one-third of this debt will not be collected. This raises the issue of sustainability of the program <span class="citation">(Jackson et al., 2016)</span>. For debtors who do not earn the minimum threshold, the risk of loan defaults increase and the burden of repayment falls on taxpayers and more successful borrowers <span class="citation">(Baum, 2016)</span>.</p>
+<p>Educational attainment is associated with higher labour force participation, higher income, greater wealth, lower financial stress and healthier behaviours <span class="citation">(OECD, 2018)</span>. Despite this, many individuals have debt-averse attitudes which deter them from applying to university <span class="citation">(C. Callender; G. Mason, 2017)</span>.</p>
+<p>Tertiary education cost has grown fast over time while there has been flat growth in the wages of young adults aged 25–34 <span class="citation">(Preston, 2023)</span>. The Higher Education Loan Program (HELP) is an income-contingent loan provided by the Australian Government to eligible students to cover this cost.</p>
+<p>The income-contingency reduces the risk of borrowing for students where the future value of education or training is uncertain, especially for students from low-income backgrounds <span class="citation">(Albrecht &amp; Ziderman, 1991)</span> as repayment is only required once their income reaches the minimum threshold through the income tax system. Enrolments and the number of people with outstanding HELP debts has steadily increased <span class="citation">(Universities Australia, 2022)</span>.</p>
+<p>As of 2021-22, the minimum repayment threshold is $47,014. It is projected that HELP debt will total almost $200 billion in 2024–25 and almost one-third will be written off. <span class="citation">(Jackson et al., 2016)</span>. For debtors who do not earn the minimum threshold, the risk of loan defaults increase and the burden of repayment falls on taxpayers and more successful borrowers <span class="citation">(Baum, 2016)</span>.</p>
+<p>This report will attempt to analyse the risks of HELP on its long-term sustainability through answering the questions of:</p>
+<ol style="list-style-type: decimal">
+<li><p><i>Alana’s</i></p></li>
+<li><p><i>Alana’s</i></p></li>
+<li><p><i>What was the distribution of taxable (HELP repayment) income of HELP debtors in Australian States and Territories in the 2021-22 financial year?</i></p></li>
+<li><p><i>What trend can be observed of the median and mean taxable (HELP repayment) income of HELP debtors in Australia over time?</i></p></li>
+<li><p><i>Chenxi’s</i></p></li>
+<li><p><i>Chenxi’s</i></p></li>
+</ol>
 </div>
 <div id="analysis" class="section level1" number="2">
 <h1><span class="header-section-number">2</span> Analysis</h1>
