Questions removed from intro. Alanas headings edited.

--- a/HELP_Analysis.html
+++ b/HELP_Analysis.html
@@ -1531,22 +1531,19 @@ border-radius: 0px;
 <p>Tertiary education cost has grown fast over time while there has been flat growth in the wages of young adults aged 25–34 <span class="citation">(Preston, 2023)</span>. The Higher Education Loan Program (HELP) is an income-contingent loan provided by the Australian Government to eligible students to cover this cost.</p>
 <p>The income-contingency reduces the risk of borrowing for students where the future value of education or training is uncertain, especially for students from low-income backgrounds <span class="citation">(Albrecht &amp; Ziderman, 1991)</span> as repayment is only required once their income reaches the minimum threshold through the income tax system. Enrolments and the number of people with outstanding HELP debts has steadily increased <span class="citation">(Universities Australia, 2022)</span>.</p>
 <p>As of 2021-22, the minimum repayment threshold is $47,014. It is projected that HELP debt will total almost $200 billion in 2024–25 and almost one-third will be written off. <span class="citation">(Jackson et al., 2016)</span>. For debtors who do not earn the minimum threshold, the risk of loan defaults increase and the burden of repayment falls on taxpayers and more successful borrowers <span class="citation">(Baum, 2016)</span>.</p>
-<p>This report will attempt to analyse the risks of HELP on its long-term sustainability through answering the questions of:</p>
-<ol style="list-style-type: decimal">
-<li><p><i>Alana’s</i></p></li>
-<li><p><i>Alana’s</i></p></li>
-<li><p><i>What was the distribution of taxable (HELP repayment) income of HELP debtors in Australian States and Territories in the 2021-22 financial year?</i></p></li>
-<li><p><i>What trend can be observed of the median and mean taxable (HELP repayment) income of HELP debtors in Australia over time?</i></p></li>
-<li><p><i>Chenxi’s</i></p></li>
-<li><p><i>Chenxi’s</i></p></li>
-</ol>
+<p>This report will attempt to analyse the risks of HELP on its long-term sustainability through the variables of time, age, sex, income, Australian state and recoverability.</p>
 </div>
 <div id="analysis" class="section level1" number="2">
 <h1><span class="header-section-number">2</span> Analysis</h1>
 <div id="yearsection" class="section level2" number="2.1">
 <h2><span class="header-section-number">2.1</span> Outstanding Debt and Debtors by Year, Age and Sex</h2>
-<div id="yearsection" class="section level3" number="2.1.1">
-<h3><span class="header-section-number">2.1.1</span> How does total outstanding debt and number of debtors change from the financial years 2005-06 to 2021-22?</h3>
+<p>This section will investigate:</p>
+<ol style="list-style-type: decimal">
+<li><em>How does total outstanding debt and number of debtors change from the financial years 2005-06 to 2021-22?</em> {#yearsection}</li>
+<li><em>How does total outstanding debt and number of debtors change over time by i) sex and ii) age group?</em></li>
+</ol>
+<div id="total-outstanding-debt-and-total-debtors-2005-2022" class="section level3" number="2.1.1">
+<h3><span class="header-section-number">2.1.1</span> Total Outstanding Debt and Total Debtors 2005-2022</h3>
 <table>
 <caption><span id="tab:table1">Table 2.1: </span>Total Debtors (in millions) and Total Oustanding Debt (in billions)</caption>
 <colgroup>
