Moving research questions from section headings to separate paragraph, adding research subtopic to introduction, and moving code chunks to improve flow

--- a/HELP_Analysis.html
+++ b/HELP_Analysis.html
@@ -1531,7 +1531,7 @@ border-radius: 0px;
 <p>Tertiary education cost has grown fast over time while there has been flat growth in the wages of young adults aged 25–34 <span class="citation">(Preston, 2023)</span>. The Higher Education Loan Program (HELP) is an income-contingent loan provided by the Australian Government to eligible students to cover this cost.</p>
 <p>The income-contingency reduces the risk of borrowing for students where the future value of education or training is uncertain, especially for students from low-income backgrounds <span class="citation">(Albrecht &amp; Ziderman, 1991)</span> as repayment is only required once their income reaches the minimum threshold through the income tax system. Enrolments and the number of people with outstanding HELP debts has steadily increased <span class="citation">(Universities Australia, 2022)</span>.</p>
 <p>As of 2021-22, the minimum repayment threshold is $47,014. It is projected that HELP debt will total almost $200 billion in 2024–25 and almost one-third will be written off. <span class="citation">(Jackson et al., 2016)</span>. For debtors who do not earn the minimum threshold, the risk of loan defaults increase and the burden of repayment falls on taxpayers and more successful borrowers <span class="citation">(Baum, 2016)</span>.</p>
-<p>This report will attempt to analyse the risks of HELP on its long-term sustainability through the variables of time, age, sex, income, Australian state and recoverability.</p>
+<p>This report will attempt to analyse the risks of HELP on its long-term sustainability through the variables of time, age, sex, income, and recoverability. Analysis of distribution of income and changes to the median and mean earnings of debtors will be able to inform the expectations of loan recoverability.</p>
 </div>
 <div id="analysis" class="section level1" number="2">
 <h1><span class="header-section-number">2</span> Analysis</h1>
@@ -1539,7 +1539,7 @@ border-radius: 0px;
 <h2><span class="header-section-number">2.1</span> Outstanding Debt and Debtors by Year, Age and Sex</h2>
 <p>This section will investigate:</p>
 <ol style="list-style-type: decimal">
-<li><em>How does total outstanding debt and number of debtors change from the financial years 2005-06 to 2021-22?</em> {#yearsection}</li>
+<li><em>How does total outstanding debt and number of debtors change from the financial years 2005-06 to 2021-22?</em></li>
 <li><em>How does total outstanding debt and number of debtors change over time by i) sex and ii) age group?</em></li>
 </ol>
 <div id="yearsection" class="section level3" number="2.1.1">
@@ -1756,7 +1756,13 @@ Figure 2.3: Total outstanding debt and number of debtors by age from the financi
 </div>
 <div id="income" class="section level2" number="2.2">
 <h2><span class="header-section-number">2.2</span> Income and Outstanding Debt</h2>
-<p><b> What was the distribution of taxable (HELP repayment) income of HELP debtors in Australian States and Territories in the 2021-22 financial year? </b></p>
+<p>This section investigates:</p>
+<ol style="list-style-type: decimal">
+<li><em>What was the distribution of taxable (HELP repayment) income of HELP debtors in Australian States and Territories in the 2021-22 financial year?</em></li>
+<li><em>What trend can be observed of the median and mean taxable (HELP repayment) income of HELP debtors in Australia over time?</em></li>
+</ol>
+<div id="distribution" class="section level3" number="2.2.1">
+<h3><span class="header-section-number">2.2.1</span> Income Distribution</h3>
 <table style="width:100%;">
 <caption><span id="tab:disttab">Table 2.4: </span>Table of count of outstanding HELP debtors in each income group by State or Territory in 2021-22</caption>
 <colgroup>
@@ -1963,7 +1969,9 @@ Figure 2.4: Distribution of HELP debtor income in Australian States and Territor
 </p>
 </div>
 <p>Table <a href="#tab:disttab">2.4</a> presents the counts of students with outstanding HELP debt in each income group, incremented by $10,000, in all States and Territories in the 2021-22 fiscal year. The distribution of debtors is depicted in Figure <a href="#fig:distfig">2.4</a>. Across all income groups, NSW, QLD, and VIC have the highest number of debtors. There are 336,992 outstanding HELP debtors earning between $20,000 and $29,999, the highest of all income groups. The number of debtors diminishes gradually as the income group increases. The income group with the lowest number of outstanding debtors is $120,000 to $129,999, with 19,642 debtors. It is to be noted that the “$130,000 or more” income group is an exception as it does not observe the $10,000 increment rule.</p>
-<p><b> What trend can be observed of the median and mean taxable (HELP repayment) income of HELP debtors in Australia over time? </b></p>
+</div>
+<div id="median" class="section level3" number="2.2.2">
+<h3><span class="header-section-number">2.2.2</span> Median and Mean Income</h3>
 <table>
 <caption><span id="tab:mediantab">Table 2.5: </span>Table of the median and mean taxable income group of outstanding HELP debtors in Australia from 2009-10 to 2021-22</caption>
 <colgroup>
@@ -2068,6 +2076,7 @@ Figure 2.5: Median and mean income of HELP debtors in Australia from 2009 to 202
 </p>
 </div>
 <p>Table <a href="#tab:mediantab">2.5</a> presents the median and mean (average) income of HELP debtors in Australia from 2009 to 2021 and the trends are illustrated in Figure <a href="#fig:medianfig">2.5</a>. The median and average income follow the same positive trend, increasing overall by one income group ($10,000) since 2009. The median typically sits below the average by one income group. In 2009, the median income group was $30,000 to $39,999 and the mean income group was $40,000 to $49,999. By 2021, the median had increased to $40,000 to $49,999 and the average to $50,000 to $59,999. The lowest median and mean income group of HELP debtors were observed in the 2010-11 to 2012-13 and 2015-16 fiscal years, at $20,000 to $29,999 and $30,000 to $39,999 respectively.</p>
+</div>
 </div>
 <div id="recoverability-of-help-debt-over-time" class="section level2" number="2.3">
 <h2><span class="header-section-number">2.3</span> Recoverability of HELP Debt Over Time</h2>
@@ -2282,7 +2291,7 @@ Figure 2.7: Debt Writeoff as % of Annual New Debt
 </div>
 <div id="conclusion" class="section level1" number="3">
 <h1><span class="header-section-number">3</span> Conclusion</h1>
-<p>Based on the analysis in <a href="#income">2.2</a>, most debtors earn below the average income, while the number of debtors earning above the average diminishes as the income group increases. The skewed distribution in Figure <a href="#fig:distfig">2.4</a> represents the government’s risk in recovering HELP debt in 2021. Up to $20,000 to $29,999, the risk increases as many debtors do not meet the minimum repayment threshold. However, beyond $30,000, as income increases, the government’s risk decreases as more repayments are made through the tax system. The increase of median and mean income observed in Figure <a href="#fig:medianfig">2.5</a> indicate an overall inflation of debtor income since 2009, meaning an improved ability to repay the HELP debt. This observation is supported by Figure <a href="#fig:DebtRepaymentGraph">2.6</a> which shows significant increase in annual payments received from 2016 reflective of increased debtor income and being pushed into higher repayment brackets.</p>
+<p>Based on the analysis in <a href="#distribution">2.2.1</a> and <a href="#median">2.2.2</a>, most debtors earn below the average income, while the number of debtors earning above the average diminishes as the income group increases. The skewed distribution in Figure <a href="#fig:distfig">2.4</a> represents the government’s risk in recovering HELP debt in 2021. Up to $20,000 to $29,999, the risk increases as many debtors do not meet the minimum repayment threshold. However, beyond $30,000, as income increases, the government’s risk decreases as more repayments are made through the tax system. The increase of median and mean income observed in Figure <a href="#fig:medianfig">2.5</a> indicate an overall inflation of debtor income since 2009, meaning an improved ability to repay the HELP debt. This observation is supported by Figure <a href="#fig:DebtRepaymentGraph">2.6</a> which shows significant increase in annual payments received from 2016 reflective of increased debtor income and being pushed into higher repayment brackets.</p>
 <p>The number of debtors and outstanding debt has steadily increased since 2005. From 2005 to 2021, there has been an increase of 1.82 million people in debt. During this same period, there has been an increase in outstanding debt of $62 billion <a href="#yearsection">2.1.1</a>. Females are more likely to have HELP debt and there is an increasing gap between males and females in debt <a href="#sexsection">2.1.2</a>. It appears with age, the risk of student debt decreases. All age groups increased in debtors and outstanding debt for 2005-2021, except for the age group 0-19, which saw a sudden drop in 2018-2021 <a href="#agesection">2.1.3</a>. Overall, Student debt levels are rising, along with a rise in older people with outstanding debt, especially women <span class="citation">(Preston, 2023)</span>.</p>
 <p>However, this analysis is limited by the data not accounting for the size of HELP debt incurred and how progressed the debtor is in their career. Further progressed careers and larger debts which may indicate higher education further both may increase the level of income earned, while newer graduates may be in a lower income group.</p>
 </div>
