Adding reference to data source in introduction section

--- a/HELP_Analysis.html
+++ b/HELP_Analysis.html
@@ -1521,11 +1521,11 @@ border-radius: 0px;
 
 <div id="introduction" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Introduction</h1>
-<p>Educational attainment is associated with higher labour force participation, higher income, greater wealth, lower financial stress and healthier behaviours <span class="citation">(OECD, 2018)</span>. Despite this, many individuals have debt-averse attitudes which deter them from applying to university <span class="citation">(C. Callender; G. Mason, 2017)</span>.</p>
+<p>Educational attainment is associated with higher labour force participation, higher income, greater wealth, lower financial stress and healthier behaviours <span class="citation">(OECD, 2018)</span>. Despite this, many individuals have debt-averse attitudes which deter them from applying to university <span class="citation">(Callender &amp; Mason, 2017)</span>.</p>
 <p>Tertiary education cost has grown fast over time while there has been flat growth in the wages of young adults aged 25–34 <span class="citation">(Preston, 2023)</span>. The Higher Education Loan Program (HELP) is an income-contingent loan provided by the Australian Government to eligible students to cover this cost.</p>
 <p>The income-contingency reduces the risk of borrowing for students where the future value of education or training is uncertain, especially for students from low-income backgrounds <span class="citation">(Albrecht &amp; Ziderman, 1991)</span> as repayment is only required once their income reaches the minimum threshold through the income tax system. Enrolments and the number of people with outstanding HELP debts has steadily increased <span class="citation">(Universities Australia, 2022)</span>.</p>
 <p>As of 2021-22, the minimum repayment threshold is $47,014. It is projected that HELP debt will total almost $200 billion in 2024–25 and almost one-third will be written off. <span class="citation">(Jackson et al., 2016)</span>. For debtors who do not earn the minimum threshold, the risk of loan defaults increase and the burden of repayment falls on taxpayers and more successful borrowers <span class="citation">(Baum, 2016)</span>.</p>
-<p>This report will attempt to analyse the risks of HELP on its long-term sustainability through the variables of time, age, sex, income, and recoverability. Analysis of distribution of income and changes to the median and mean earnings of debtors will be able to inform the expectations of loan recoverability, which is also supported through an examination of annual repayments and new loans issued under the program, as well as comparison of debt writeoff with commercial banks.</p>
+<p>Using data retrieved from <span class="citation">Australian Taxation Office (2022)</span>, this report will attempt to analyse the risks of HELP on its long-term sustainability through the variables of time, age, sex, income, and recoverability. Analysis of distribution of income and changes to the median and mean earnings of debtors will be able to inform the expectations of loan recoverability, which is also supported through an examination of annual repayments and new loans issued under the program, as well as comparison of debt writeoff with commercial banks.</p>
 </div>
 <div id="analysis" class="section level1" number="2">
 <h1><span class="header-section-number">2</span> Analysis</h1>
@@ -2304,11 +2304,14 @@ Figure 2.7: Debt Writeoff as % of Annual New Debt
 <div id="ref-albrecht1991deferred" class="csl-entry">
 Albrecht, D., &amp; Ziderman, A. (1991). <em>Deferred cost recovery for higher education: Student loan programs in developing countries</em>. World Bank. <a href="https://books.google.com.au/books?id=GCWa2sbFoD0C">https://books.google.com.au/books?id=GCWa2sbFoD0C</a>
 </div>
+<div id="ref-dataSet2022" class="csl-entry">
+Australian Taxation Office. (2022). <em>Higher education loan program (HELP)</em>. Australian Taxation Office. <a href="https://data.gov.au/data/dataset/higher-education-loan-program-help">https://data.gov.au/data/dataset/higher-education-loan-program-help</a>
+</div>
 <div id="ref-BaumSandy2016SLPa" class="csl-entry">
 Baum, S. (2016). Student loan programs and the realities of student debt. In <em>Student debt</em> (pp. 17–42). Palgrave Macmillan.
 </div>
 <div id="ref-c_callender_g_mason_does_2017" class="csl-entry">
-C. Callender; G. Mason. (2017). Does student loan debt deter higher education participation? New evidence from england. <em>Sage Journals</em>, <em>671</em>(1). <a href="https://journals.sagepub.com/doi/abs/10.1177/0002716217696041">https://journals.sagepub.com/doi/abs/10.1177/0002716217696041</a>
+Callender, C., &amp; Mason, G. (2017). Does student loan debt deter higher education participation? New evidence from england. <em>Sage Journals</em>, <em>671</em>(1). <a href="https://journals.sagepub.com/doi/abs/10.1177/0002716217696041">https://journals.sagepub.com/doi/abs/10.1177/0002716217696041</a>
 </div>
 <div id="ref-pwc2019" class="csl-entry">
 Dunn, W., Kamath, R., Mucherla, R., Pereira, I., Perera, S., &amp; Rogers, J. (2019). <em>The reality of a new era for australian banking, banking matters, major banks analysis full year november 2019</em> (Banking Matters, Major Banks Analysis Full Year November 2019). PwC. <a href="https://www.pwc.com.au/banking-capital-markets/banking-matters/mba_banking_matters_nov_full_19.pdf">https://www.pwc.com.au/banking-capital-markets/banking-matters/mba_banking_matters_nov_full_19.pdf</a>
