Adding CRAN and Rstudio software references to .bib and .Rmd file with no cite

--- a/HELP_Analysis.html
+++ b/HELP_Analysis.html
@@ -2304,6 +2304,9 @@ Figure 2.7: Debt Writeoff as % of Annual New Debt
 <div id="ref-albrecht1991deferred" class="csl-entry">
 Albrecht, D., &amp; Ziderman, A. (1991). <em>Deferred cost recovery for higher education: Student loan programs in developing countries</em>. World Bank. <a href="https://books.google.com.au/books?id=GCWa2sbFoD0C">https://books.google.com.au/books?id=GCWa2sbFoD0C</a>
 </div>
+<div id="ref-CRAN" class="csl-entry">
+Altmann, B., Hornik, K., Kalibera, T., Ligges, U., Ripley, B. D., Urbanek, S., &amp; Wimmer, V. (2023). <em>The comprehensive r archive network</em> (Version 4.3.0). <a href="https://cran.rstudio.com/">https://cran.rstudio.com/</a>
+</div>
 <div id="ref-dataSet2022" class="csl-entry">
 Australian Taxation Office. (2022). <em>Higher education loan program (HELP)</em>. Australian Taxation Office. <a href="https://data.gov.au/data/dataset/higher-education-loan-program-help">https://data.gov.au/data/dataset/higher-education-loan-program-help</a>
 </div>
@@ -2321,6 +2324,9 @@ Jackson, K., Esguerra, E., Callaway, N., Liao, J., &amp; Morris, A. (2016). <em>
 </div>
 <div id="ref-oecd_benefits_2018" class="csl-entry">
 OECD. (2018). <em>Benefits of educational attainment</em>. Australian Government, Department of Education.
+</div>
+<div id="ref-RStudio" class="csl-entry">
+Posit. (2023). <em>RStudio IDE</em> (Version 2023.06.0+421). <a href="https://posit.co/products/open-source/rstudio/">https://posit.co/products/open-source/rstudio/</a>
 </div>
 <div id="ref-preston_gender_2023" class="csl-entry">
 Preston, A. (2023). <em>Gender and australia’s higher education loan program. The university of western australia</em> [Submission to the Review of Australia’s Higher Education System]. Department of Economics <span>UWA</span> Business School. <a href="https://www.education.gov.au/system/files/documents/submission-file/2023-04/AUA_tranche2_Alison%20Preston.pdf">https://www.education.gov.au/system/files/documents/submission-file/2023-04/AUA_tranche2_Alison%20Preston.pdf</a>
